[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "libadctf"
version = "0.1.1"
description = "A Python library"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
start_sploit = "libadctf.start_sploit:start"

[tool.hatch.build.targets.wheel]
packages = ["src/libadctf"]
