[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "libadctf"
version = "0.1.2"
description = "A Python library"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
start_sploit = "libadctf.start_sploit:start"

[tool.hatch.build.targets.wheel]
packages = ["src/libadctf"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
strict = true

[dependency-groups]
dev = ["mypy>=1.18.2", "ruff>=0.14.2"]
